<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/general_background">

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <include
        layout="@layout/app_bar3"
        android:id="@+id/app_bar4"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:paddingLeft="40dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/app_bar4"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/age"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:hint="@string/enter_age"
                android:textColorHint="@color/background"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/background"
                />

            <EditText
                android:id="@+id/gender"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:hint="@string/enter_gender"
                android:textColorHint="@color/background"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/background"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            >


            <EditText
                android:id="@+id/cp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:hint="@string/enter_cp"
                android:textColorHint="@color/background"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/background"
                android:inputType="numberDecimal"
                />

            <EditText
                android:id="@+id/trestbps"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:hint="@string/enter_trestbps"
                android:textColorHint="@color/background"
                android:textStyle="bold"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                android:textColor="@color/background"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            >


            <EditText
                android:id="@+id/cholesterol"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:hint="@string/enter_cholesterol"
                android:textColorHint="@color/background"
                android:inputType="numberDecimal"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/background"
                />

            <EditText
                android:id="@+id/fbs"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:hint="@string/enter_fbs"
                android:inputType="numberDecimal"
                android:textColorHint="@color/background"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/background"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            >


            <EditText
                android:id="@+id/thalach"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:hint="@string/enter_thalach"
                android:textColorHint="@color/background"
                android:inputType="numberDecimal"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/background"
                />

            <EditText
                android:id="@+id/exang"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:hint="@string/enter_exang"
                android:textColorHint="@color/background"
                android:inputType="numberDecimal"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/background"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            >


        <EditText
            android:id="@+id/oldPeak"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:hint="@string/enter_old_peak"
            android:textColorHint="@color/background"
            android:inputType="numberDecimal"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/background"
            />

        <EditText
            android:id="@+id/slope"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:hint="@string/enter_slope"
            android:textColorHint="@color/background"
            android:inputType="numberDecimal"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/background"
            />


    </LinearLayout>

        <LinearLayout
            android:id="@+id/linear6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            >


            <EditText
                android:id="@+id/ca"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:hint="@string/enter_ca"
                android:textColorHint="@color/background"
                android:textStyle="bold"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                android:textColor="@color/background"
                />

            <EditText
                android:id="@+id/pregnancies"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:hint="@string/pregnancies"
                android:textColorHint="@color/background"
                android:inputType="number"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/background"
                />


        </LinearLayout>

        <LinearLayout
        android:id="@+id/linear7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        >


        <EditText
            android:id="@+id/glucose"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:hint="@string/enter_glucose"
            android:textColorHint="@color/background"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            android:textColor="@color/background"
            />

        <EditText
            android:id="@+id/bloodPressure"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:hint="@string/blood_pressure"
            android:textColorHint="@color/background"
            android:inputType="numberDecimal"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/background"
            />


    </LinearLayout>

        <LinearLayout
            android:id="@+id/linear8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            >


            <EditText
                android:id="@+id/skinThickness"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:hint="@string/skin_thickness"
                android:textColorHint="@color/background"
                android:textStyle="bold"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                android:textColor="@color/background"
                />

            <EditText
                android:id="@+id/insulin"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:hint="@string/enter_insulin"
                android:textColorHint="@color/background"
                android:inputType="numberDecimal"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/background"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            >


            <EditText
                android:id="@+id/bmi"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:hint="@string/enter_bmi"
                android:textColorHint="@color/background"
                android:textStyle="bold"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                android:textColor="@color/background"
                />

            <EditText
                android:id="@+id/diabetesPedigree"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:hint="@string/diabetes_pedigree"
                android:textColorHint="@color/background"
                android:inputType="numberDecimal"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/background"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            >


            <EditText
                android:id="@+id/restecg"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:hint="@string/enter_restecg"
                android:textColorHint="@color/background"
                android:textStyle="bold"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                android:textColor="@color/background"
                />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            >


            <Button
                android:id="@+id/save"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:text="@string/save"
                android:textColorHint="@color/background"
                android:textStyle="bold"
                android:background="@drawable/button_style"
                android:textSize="14sp"
                android:textColor="@color/background"
                />

            <Button
                android:id="@+id/cancel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:text="@string/cancel"
                android:textStyle="bold"
                android:background="@drawable/button_style"
                android:textSize="14sp"
                android:textColor="@color/background"
                />


        </LinearLayout>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>